Fix Safari image distortion for mobile views

--- a/css/projectsection.css
+++ b/css/projectsection.css
@@ -267,5 +267,6 @@
         min-height: 100%;
         min-width: 100%;
         object-fit: scale-down;
+        align-items: flex-start;
     }
   }
